--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Api</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="icon" href="/favicon.ico">
+    <title>proyecto_inventario</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
+    <link href="/js/chunk-2d216214.cece44c1.js" rel="prefetch">
+    <link href="/js/chunk-2d216257.1caeb235.js" rel="prefetch">
+    <link href="/js/chunk-45d4c016.5b42da94.js" rel="prefetch">
+    <link href="/css/app.b4008dc4.css" rel="preload" as="style">
+    <link href="/css/chunk-vendors.e8543faa.css" rel="preload" as="style">
+    <link href="/js/app.3fcecfab.js" rel="preload" as="script">
+    <link href="/js/chunk-vendors.6d175eb9.js" rel="preload" as="script">
+    <link href="/css/chunk-vendors.e8543faa.css" rel="stylesheet">
+    <link href="/css/app.b4008dc4.css" rel="stylesheet">
 </head>
-<body>
-    <h1>Api en construccion!!!!!!
-    </h1>
-    
+
+<body><noscript><strong>We're sorry but proyecto_inventario doesn't work properly without JavaScript enabled. Please
+            enable it to continue.</strong></noscript>
+    <div id="app"></div>
+    <script src="/js/chunk-vendors.6d175eb9.js"></script>
+    <script src="/js/app.3fcecfab.js"></script>
 </body>
+
 </html>
